[package]
name = "rockbell"
description = "Rockbell is a no dependencies multithreaded web server for building HTML and Markdown (coming soon) websites."
version = "0.0.1"
authors = ["azazelm3dj3d"]
edition = "2018"
license = "BSD-2-Clause"
categories = ["filesystem", "web-programming", "web-programming::http-server"]
keywords = ["server", "web", "rockbell", "html"]
repository = "https://github.com/azazellabs/rockbell"

[dependencies]